--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,12 @@
 # EditorConfig is awesome: https://EditorConfig.org
-
 root = true
 
 [*]
 charset = utf-8
 end_of_line = lf
 insert_final_newline = true
+trim_trailing_whitespace = true
 
-[*.{cjs,js,svelte,ts}]
+[*.{cjs,css,html,js,json,md,prettierrc,svelte,ts,yaml,yml}]
 indent_style = space
 indent_size = 2
