--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,6 +19,7 @@
                 "editor.quickSuggestions": {
                     "strings": "on"
                 },
+                "editor.renderWhitespace": "boundary",
                 "files.associations": {
                     "*.css": "tailwindcss"
                 },
@@ -27,7 +28,8 @@
                 },
                 "tailwindCSS.includeLanguages": {
                     "plaintext": "html"
-                }
+                },
+                "svelte.enable-ts-plugin": true
             }
         }
     }
